fixed post/content html structure and alignment and added settings.ejs

--- a/public/components/Navbar/navbar.css
+++ b/public/components/Navbar/navbar.css
@@ -25,4 +25,5 @@
 
 #userAvatar {
    margin-left: 10px;
+   border-radius: 100em;
 }
